--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p>Created by <a href="https://Kondeo.com/">Kondeo</a></p>
       </div>
     </div>
 
