--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/newpoint.js"></script>
         <script src="scripts/services/points.js"></script>
         <!-- endbuild -->
 </body>
